--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -16,17 +16,37 @@
         <div class="row">
             <!-- Order Summary -->
             <div class="col-md-6">
-                <h4>Order Summary</h4>
+                {#                <h4 class="mb-3">Order Summary</h4>#}
+                {% if source == 'buy_now' %}
+                    <h4 class="mb-3">Buying: {{ cart_items.0.product.title }}</h4>
+                {% else %}
+                    <h4 class="mb-3">Order Summary</h4>
+                {% endif %}
                 <ul class="list-group">
-                    {% for item in cart %}
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            {{ item.product.name }} (x{{ item.quantity }})
-                            <span>${{ item.price }}</span>
+                    {% for cart_item in cart_items %}
+                        <li class="list-group-item d-flex align-items-center justify-content-between">
+                            <div class="d-flex align-items-center">
+                                <img src="{{ cart_item.product.display_image.url }}" alt="{{ cart_item.product.title }}"
+                                     class="me-3 rounded" style="width: 50px; height: 50px; object-fit: cover;">
+                                <div>
+                                    <strong>{{ cart_item.product.title }}</strong><br>
+                                    <small class="text-muted">Qty: {{ cart_item.quantity }}</small>
+                                    <br>
+
+                                    {% if cart_item.size %}<small>Size: {{ cart_item.size }}</small>{% endif %}
+                                    {% if cart_item.color %}<small>Color: {{ cart_item.color }}</small>{% endif %}
+                                </div>
+                            </div>
+                            <span class="fw-bold">KSh {{ cart_item.total }}</span>
                         </li>
                     {% endfor %}
                 </ul>
-                <h5 class="mt-3">Total: ${{ cart.get_total_price }}</h5>
+                <div class="d-flex justify-content-between align-items-center mt-3 px-2">
+                    <h5 class="mb-0 fw-bold">Total:</h5>
+                    <h5 class="mb-0 fw-bold">KSh {{ total }}</h5>
+                </div>
             </div>
+
 
             <!-- Billing & Shipping Form -->
             <div class="col-md-6">
