filters are working alright, flash messages intergrated, polish up in the morning.

--- a/templates/cart_page.html
+++ b/templates/cart_page.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <form method="post">{% csrf_token %}</form>
-    <section class="container product-page-container mt-5">
+    <section class="container product-page-container">
         <h2 class="text-center mb-4">Your Cart</h2>
 
         <div class="row">
