--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container product-page-container mb-5">
+    <div class="container product-page-container confirmation-container">
         <h2 class="text-center">Checkout</h2>
 
         <div class="row">
@@ -51,7 +51,7 @@
             <!-- Billing & Shipping Form -->
             <div class="col-md-6">
                 <h4>Billing & Shipping Details</h4>
-                <form method="POST">
+                <form method="POST" action="{% url 'checkout_confirmation' %}">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label for="name" class="form-label">Full Name</label>
