--- a/templates/update_product.html
+++ b/templates/update_product.html
@@ -1,8 +1,8 @@
-{% extends 'master.html' %}
+{% extends 'dashboard_master.html' %}
 {% load static %}
 
 {% block title %}
-	<title>Update Product</title>
+<title>Update Product</title>
 {% endblock %}
 
 {% block extra_css %}
@@ -10,7 +10,153 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-fluid">
 
+	<!-- Page Heading -->
+	<h1 class="h3 mb-2 text-gray-800">Edit Your Product</h1>
+
+	<!-- DataTales Example -->
+	<div class="card shadow mb-4">
+		<div class="card-header py-3">
+			<h6 class="m-0 font-weight-bold text-primary">Product Details</h6>
+		</div>
+		<div class="card-body">
+			<div class="container mt-5">
+				<h3 class="mb-4">Edit Product: {{ product.title }}</h3>
+
+				<form method="POST" enctype="multipart/form-data">
+					{% csrf_token %}
+
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label>Product Title</label>
+							<input type="text" name="title" class="form-control" value="{{ product.title }}" required>
+						</div>
+
+						<div class="col-md-6 mb-3">
+							<label>Price</label>
+							<input type="number" step="0.01" name="price" class="form-control"
+								value="{{ product.price }}" required>
+						</div>
+
+						<!-- Category Dropdown -->
+						<div class="col-md-6 mb-3">
+							<label>Category</label>
+							<select name="category" class="form-control" required>
+								{% for category in categories %}
+								<option value="{{ category.id }}" {% if category.id == product.category.id %}selected{% endif %}>
+
+									{{ category.name }}
+								</option>
+								{% endfor %}
+							</select>
+						</div>
+
+						<!-- Subcategory Dropdown -->
+						<div class="col-md-6 mb-3">
+							<label>Subcategory</label>
+							<select name="subcategory" class="form-control">
+								{% for subcat in subcategories %}
+								<option value="{{ category.id }}" {% if category.id == product.category.id %}selected{% endif %}>
+
+									{{ subcat.name }}
+								</option>
+								{% endfor %}
+							</select>
+						</div>
+
+
+						<div class="col-md-6 mb-3">
+							<label>Gender</label>
+							<select name="gender" class="form-control">
+								<option value="Unisex" {% if product.gender == 'Unisex' %}selected{% endif %}>Unisex
+								</option>
+								<option value="Male" {% if product.gender == 'Male' %}selected{% endif %}>Male</option>
+								<option value="Female" {% if product.gender == 'Female' %}selected{% endif %}>Female
+								</option>
+							</select>
+						</div>
+
+						<div class="col-md-6 mb-3">
+							<label>Type</label>
+							<input type="text" name="type" class="form-control" value="{{ product.type }}">
+						</div>
+
+						<div class="col-md-12 mb-3">
+							<label>Description</label>
+							<textarea name="description" class="form-control"
+								rows="4">{{ product.description }}</textarea>
+						</div>
+
+						<!-- <div class="col-md-6 mb-3">
+							<label>Is New?</label>
+							<select name="is_new" class="form-control">
+								<option value="True" {% if product.is_new %}selected{% endif %}>Yes</option>
+								<option value="False" {% if not product.is_new %}selected{% endif %}>No</option>
+							</select>
+						</div> -->
+
+						<div class="col-md-6 mb-3">
+							<label>Sizes</label>
+							<select name="sizes" class="form-control" multiple>
+								{% for size in sizes %}
+								<option value="{{ size.id }}" {% if size in product.sizes.all %}selected{% endif %}>
+									{{ size.name }}</option>
+								{% endfor %}
+							</select>
+						</div>
+
+						<div class="col-md-6 mb-3">
+							<label>Colors</label>
+							<select name="colors" class="form-control" multiple>
+								{% for color in colors %}
+								<option value="{{ color.id }}" {% if color in product.colors.all %}selected{% endif %}>
+									{{ color.name }}</option>
+								{% endfor %}
+							</select>
+						</div>
+
+						<div class="col-md-12 mb-4">
+							<label>Display Image</label><br>
+							<img src="{{ product.display_image.url }}" width="100" class="mb-2"><br>
+							<input type="file" name="display_image" class="form-control-file">
+						</div>
+
+						<div class="col-md-4 mb-4">
+							<label>Image One</label><br>
+							{% if product.image_one %}<img src="{{ product.image_one.url }}" width="100"
+								class="mb-2"><br>{% endif %}
+							<input type="file" name="image_one" class="form-control-file">
+						</div>
+
+						<div class="col-md-4 mb-4">
+							<label>Image Two</label><br>
+							{% if product.image_two %}<img src="{{ product.image_two.url }}" width="100"
+								class="mb-2"><br>{% endif %}
+							<input type="file" name="image_two" class="form-control-file">
+						</div>
+
+						<div class="col-md-4 mb-4">
+							<label>Image Three</label><br>
+							{% if product.image_three %}<img src="{{ product.image_three.url }}" width="100"
+								class="mb-2"><br>{% endif %}
+							<input type="file" name="image_three" class="form-control-file">
+						</div>
+
+						<div class="col-md-12">
+							<button type="submit" class="btn btn-success">Update Product</button>
+							<a href="{% url 'product_list' %}" class="btn btn-secondary ml-2">Back to List</a>
+						</div>
+					</div>
+				</form>
+			</div>
+
+
+
+		</div>
+	</div>
+
+</div>
 {% endblock %}
 
 {% block extra_js %}
