--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -74,7 +74,7 @@
                         <select name="payment_method" class="form-select">
                             <option value="mpesa">M-Pesa</option>
                             <option value="card">Credit/Debit Card</option>
-                            <option value="cod">Cash</option>
+                            <option value="cash">Cash</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Place Order</button>
