--- a/templates/master.html
+++ b/templates/master.html
@@ -108,9 +108,9 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-md-6">
-                <h5>Shoe Store</h5>
-                <p>Quality footwear for every occasion.</p>
-                <p>&copy; 2025 Shoe Store. All Rights Reserved.</p>
+                <h5>Thread & Trend</h5>
+                <p>Quality swag for every occasion.</p>
+                <p>&copy; 2025 Thread & Trend. All Rights Reserved.</p>
             </div>
             <div class="col-md-6">
                 <h5>Follow Us</h5>
