--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -62,6 +62,10 @@
                                     <input type="email" name="email" class="form-control form-control-user"
                                         placeholder="Email Address" required>
                                 </div>
+                                <div class="form-group">
+                                    <label class="small">Profile Image (optional)</label>
+                                    <input type="file" name="profile_img" class="form-control form-control-user">
+                                </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="password" name="password" class="form-control form-control-user"
