Dashboard progress still on going

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -68,6 +68,11 @@
 					required>
 			</div>
 
+			<div class="col-sm-6">
+				<input type="number" id="pieces" name="pieces" min="1" class="form-control form-control-user" placeholder="Available Pieces"
+					required>
+			</div>
+
 			<!-- <div class="col-sm-6">
 				<label class="small">Is this a new arrival?</label>
 				<select name="is_new" class="form-control form-control-user">
