--- a/templates/dashboard_master.html
+++ b/templates/dashboard_master.html
@@ -87,6 +87,12 @@
                     <span>All Products</span></a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'vendor_sales' %}">
+                    <i class="fas fa-bars"></i>
+                    <span>Sold Products</span></a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider">
 
