--- a/templates/update_product.html
+++ b/templates/update_product.html
@@ -38,6 +38,13 @@
 								value="{{ product.price }}" required>
 						</div>
 
+
+						<div class="col-md-6 mb-3">
+							<label>Pieces</label>
+							<input type="number" name="pieces" class="form-control"
+								value="{{ product.pieces }}" required>
+						</div>
+
 						<!-- Category Dropdown -->
 						<div class="col-md-6 mb-3">
 							<label>Category</label>
